<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgFaculty"
        android:layout_width="411dp"
        android:layout_height="538dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="398dp"
        android:layout_height="464dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdmission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeadingAdmission"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAdmit"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textAdmissionInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:text="@string/textAdmissionInfo"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

            <TextView
                android:id="@+id/textAdmissionUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="40dp"
                android:text="@string/textAdmissionUrl"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="@color/ucc_purple"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/btnCourse"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnStaff"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnAdmission"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/book"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnAdmission"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#fff"
        app:tint="#1471b2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/admit"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnStaff"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/staff"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/labelHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelHome"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnHome"
        app:layout_constraintEnd_toEndOf="@+id/btnHome"
        app:layout_constraintStart_toStartOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="@+id/btnHome"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelAdmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAdmissions"
        android:textColor="#1471b2"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdmission"
        app:layout_constraintEnd_toEndOf="@+id/btnAdmission"
        app:layout_constraintStart_toStartOf="@+id/btnAdmission"
        app:layout_constraintTop_toTopOf="@+id/btnAdmission"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelFaculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelFaculty"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnStaff"
        app:layout_constraintEnd_toEndOf="@+id/btnStaff"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/btnStaff"
        app:layout_constraintTop_toTopOf="@+id/btnStaff"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCourse"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCourse"
        app:layout_constraintEnd_toEndOf="@+id/btnCourse"
        app:layout_constraintStart_toStartOf="@+id/btnCourse"
        app:layout_constraintTop_toTopOf="@+id/btnCourse"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textHeadingAdmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/textHeading"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>