<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgFaculty"
        android:layout_width="411dp"
        android:layout_height="538dp"
        app:layout_constraintBottom_toBottomOf="@+id/lvDirectory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <ListView
        android:id="@+id/lvDirectory"
        android:layout_width="405dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdmission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnCourse"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnStaff"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnAdmission"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/book"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnAdmission"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#fff"
        app:tint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/admit"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnStaff"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.98"
        app:tint="#1471b2"
        app:srcCompat="@drawable/staff"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/home"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/labelHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelHome"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnHome"
        app:layout_constraintEnd_toEndOf="@+id/btnHome"
        app:layout_constraintStart_toStartOf="@+id/btnHome"
        app:layout_constraintTop_toTopOf="@+id/btnHome"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelAdmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelAdmissions"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAdmission"
        app:layout_constraintEnd_toEndOf="@+id/btnAdmission"
        app:layout_constraintStart_toStartOf="@+id/btnAdmission"
        app:layout_constraintTop_toTopOf="@+id/btnAdmission"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelFaculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelFaculty"
        android:textColor="#1471b2"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnStaff"
        app:layout_constraintEnd_toEndOf="@+id/btnStaff"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/btnStaff"
        app:layout_constraintTop_toTopOf="@+id/btnStaff"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCourse"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCourse"
        app:layout_constraintEnd_toEndOf="@+id/btnCourse"
        app:layout_constraintStart_toStartOf="@+id/btnCourse"
        app:layout_constraintTop_toTopOf="@+id/btnCourse"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>